making the second section n increasing video size

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </h2>
             <div class="container-video">
                 <div class="iframe-container">
-                    <iframe width="760" height="418" src="https://www.youtube.com/embed/RHLr6BBSdcE?si=hR6GfFxDHQCRjXlb"
+                    <iframe width="820" height="478" src="https://www.youtube.com/embed/RHLr6BBSdcE?si=hR6GfFxDHQCRjXlb"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
@@ -80,12 +80,19 @@
                 Toque no botão acima e entre no grupo Queima de Roupas Mayva – para aproveitar os melhores preços de Vestuário para Ciclismo do país.
             </h3>
         </section>
-        <section id="servicos" class="servicos">
-            <div class="container">
-                <h1>
-                    SEÇÃO 2
-                </h1>
+        <section id="body" class="body">
+            <div class="container-picture">
+                <picture>
+                    <source srcset="./assets/img/body-phone-img/webps/body-img-phone.webp" type="image/webp" />
+                    <img src="./assets/img/body-phone-img/body-img-phone.png" alt="Compre roupas de ciclismo na Mayva Bicicletas" id="celular-site-img-body"
+                        class="celular-site-img-body" />
+                </picture>
             </div>
+            <h2>
+                Você poderá comprar no conforto de sua casa, através dos nossos canais on-line, com preços melhores que de fábrica!
+                <br>
+                Enviamos para todo o Brasil.
+            </h2>
         </section>
         <section id="sobre" class="sobre">
             <div class="container">
