creating third section

--- a/index.html
+++ b/index.html
@@ -97,8 +97,105 @@
         <section id="sobre" class="sobre">
             <div class="container">
                 <h1>
-                    SEÇÃO 3
+                    No grupo de Whatsapp, você receberá em primeira mão nossas ofertas e informações sobre o evento.
                 </h1>
+            </div>
+            <ul class="container-items">
+                <li class="box-items">
+                    <svg fill="currentColor " xmlns="http://www.w3.org/2000/svg" height="54" viewBox="0 0 24 24">
+                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204
+                         0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259
+                          0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072
+                           4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759
+                            6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645
+                             1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                    </svg>
+                    <h1>Nossa Live do Queima de Roupas acontecerá no Instagram <b>@mayvabicicletas</b>, 06 de Agosto às 20 horas.</h1>
+                </li>
+                <li class="box-items">
+                    <svg fill="currentColor " xmlns="http://www.w3.org/2000/svg" width="64" height="54" viewBox="0 0 2500.000000 2094.000000" >
+                        <g transform="translate(0.000000,2094.000000) scale(0.100000,-0.100000)"
+                        stroke="none">
+                        <path d="M20051 20688 c-34 -134 -196 -767 -360 -1408 l-298 -1165 -9696 4
+                        -9697 4 0 -324 0 -324 993 -5300 993 -5300 8301 -3 8302 -2 3 42 3 41 49 1 49
+                        1 1512 5920 c831 3256 1515 5932 1519 5948 l6 27 1635 0 1635 0 0 1040 0 1040
+                        -2443 0 -2444 0 -62 -242z m-1200 -4667 c4 -3 -399 -1594 -895 -3536 l-902
+                        -3530 -6669 0 -6669 0 -663 3535 c-364 1944 -662 3538 -663 3541 0 8 16453 -2
+                        16461 -10z"/>
+                        <path d="M4395 6219 c-532 -47 -1082 -250 -1519 -561 -1028 -734 -1513 -1993
+                        -1240 -3218 267 -1193 1226 -2131 2424 -2370 234 -47 331 -55 630 -54 308 1
+                        444 16 705 79 978 235 1784 930 2163 1865 113 279 184 577 213 893 17 181 6
+                        533 -21 712 -26 176 -94 458 -137 573 -4 9 546 12 2731 12 1505 0 2736 -2
+                        2736 -3 0 -2 -9 -30 -21 -63 -61 -176 -117 -443 -139 -667 -18 -176 -8 -585
+                        19 -757 146 -938 696 -1748 1514 -2229 340 -199 715 -330 1127 -392 136 -21
+                        190 -24 440 -23 312 0 438 13 700 73 747 171 1422 634 1862 1276 292 425 464
+                        890 529 1430 18 147 15 522 -5 684 -120 980 -672 1823 -1522 2327 -339 200
+                        -724 333 -1169 401 -102 16 -517 17 -6015 19 -3279 1 -5949 -3 -6005 -7z m395
+                        -2079 c501 -62 879 -467 907 -971 16 -295 -104 -594 -322 -797 -127 -120 -279
+                        -203 -453 -249 -83 -22 -118 -26 -247 -26 -107 0 -170 4 -220 16 -589 143
+                        -935 723 -769 1293 138 479 613 794 1104 734z m11476 -25 c176 -45 325 -128
+                        461 -258 135 -130 224 -276 279 -462 36 -121 45 -340 19 -466 -90 -447 -440
+                        -773 -889 -829 -498 -63 -976 261 -1112 751 -38 139 -44 327 -14 469 90 435
+                        436 759 875 819 104 14 272 4 381 -24z"/>
+                        </g>
+                    </svg>
+                    <h1>Compre do conforto de sua casa, enviaremos para todo Brasil.
+                        <br>
+                        <picture>
+                            <source srcset="./assets/img/webp's/brasil.webp" type="image/webp" />
+                            <img src="./assets/img/webp's/brasil.png" alt="Bandeira do Brasil" id="bandeira-brasil-emoji-img"
+                                class="bandeira-brasil-emoji-img" />
+                        </picture>
+                    </h1>
+                    
+                </li>
+                <li class="box-items">
+                    <svg fill="currentColor " xmlns="http://www.w3.org/2000/svg" width="64" height="54" viewBox="0 0 2084.000000 2084.000000"
+                    preserveAspectRatio="xMidYMid meet">
+
+                        <g transform="translate(0.000000,2084.000000) scale(0.100000,-0.100000)" stroke="none">
+                            <path d="M2285 20829 c-671 -55 -1239 -549 -1389 -1209 -9 -36 -187 -1017
+                            -397 -2180 l-383 -2115 0 -205 c-1 -132 4 -232 13 -281 l13 -76 -35 -96 c-20
+                            -52 -45 -130 -56 -173 -43 -173 -46 -218 -45 -724 0 -522 7 -628 60 -940 121
+                            -721 464 -1448 944 -1999 60 -70 80 -100 77 -115 -39 -163 -37 13 -37 -3981 0
+                            -2524 3 -3838 10 -3906 60 -608 289 -1174 666 -1646 404 -506 964 -880 1582
+                            -1057 237 -68 443 -101 722 -116 134 -8 2192 -10 6535 -8 5903 4 6349 5 6465
+                            21 365 50 681 141 977 282 996 475 1664 1426 1773 2524 7 68 10 1382 10 3906
+                            0 3994 2 3818 -37 3981 -3 15 17 45 77 114 348 402 631 904 801 1421 94 287
+                            158 598 191 934 18 183 18 1040 0 1150 -20 117 -48 224 -89 332 l-35 96 13 76
+                            c9 49 14 148 13 281 l-1 205 -382 2115 c-210 1163 -388 2144 -397 2180 -65
+                            286 -229 578 -436 776 -267 256 -596 403 -972 434 -156 12 -16096 12 -16251
+                            -1z m15709 -2111 c3 -18 127 -710 276 -1538 148 -828 272 -1515 275 -1527 l5
+                            -23 -8130 0 -8130 0 5 23 c3 12 127 699 275 1527 149 828 273 1520 276 1538
+                            l6 32 7568 0 7568 0 6 -32z m-11744 -5252 c0 -107 -26 -292 -60 -427 -185
+                            -740 -772 -1329 -1509 -1513 -182 -46 -302 -60 -511 -60 -209 0 -329 14 -512
+                            60 -737 184 -1323 773 -1508 1513 -34 135 -60 320 -60 427 l0 74 2080 0 2080
+                            0 0 -74z m6250 0 c0 -107 -26 -292 -60 -427 -185 -741 -771 -1329 -1509 -1513
+                            -182 -46 -302 -60 -511 -60 -209 0 -329 14 -512 60 -737 184 -1323 773 -1508
+                            1513 -34 135 -60 320 -60 427 l0 74 2080 0 2080 0 0 -74z m6250 0 c0 -107 -26
+                            -292 -60 -427 -185 -741 -771 -1329 -1509 -1513 -182 -46 -302 -60 -511 -60
+                            -209 0 -329 14 -512 60 -737 184 -1323 773 -1508 1513 -34 135 -60 320 -60
+                            427 l0 74 2080 0 2080 0 0 -74z m-11080 -3049 c657 -577 1446 -921 2335 -1019
+                            183 -20 693 -17 875 5 512 63 937 188 1375 402 419 206 766 455 1106 794 l186
+                            186 124 -129 c685 -712 1577 -1147 2584 -1258 183 -20 693 -17 875 5 208 26
+                            463 73 563 103 16 5 17 -154 17 -3234 0 -3557 4 -3318 -60 -3493 -118 -324
+                            -378 -564 -715 -660 l-80 -23 -1132 -3 -1132 -4 -4 2178 c-3 2026 -4 2185 -20
+                            2283 -80 471 -272 853 -592 1175 -327 329 -729 526 -1220 597 -72 10 -542 13
+                            -2340 13 -2117 0 -2257 -1 -2365 -18 -861 -135 -1527 -735 -1734 -1563 -64
+                            -256 -60 -90 -63 -2487 l-4 -2178 -1132 4 c-1117 3 -1133 3 -1202 24 -100 30
+                            -142 46 -216 83 -240 121 -428 338 -516 595 -56 165 -53 -38 -53 3477 0 3080
+                            1 3239 18 3234 95 -29 412 -86 607 -108 172 -20 696 -17 875 5 513 64 938 188
+                            1375 402 420 206 768 456 1105 794 l185 186 125 -129 c69 -71 181 -179 250
+                            -239z m4830 -6247 l0 -2080 -2080 0 -2080 0 0 2080 0 2080 2080 0 2080 0 0
+                            -2080z"/>
+                            </g>
+                        </svg>
+
+                    <h1>‍Você pode aproveitar as promoções especiais do Queima de Roupas em nossa loja física, nos dias 07 a 10 de Agosto.</h1>
+                </li>
+            </ul>
+            <div class="container-round">
+                
             </div>
         </section>
     </main>
