adding animations to the website

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 <picture>
                     <source srcset="./assets/img/body-phone-img/webps/body-img-phone.webp" type="image/webp" />
                     <img src="./assets/img/body-phone-img/body-img-phone.png" alt="Compre roupas de ciclismo na Mayva Bicicletas" id="celular-site-img-body"
-                        class="celular-site-img-body" />
+                        class="celular-site-img-body left" />
                 </picture>
             </div>
-            <div class="container">
+            <div class="container right">
                 <h2>
                     Você poderá comprar no conforto de sua casa, através dos nossos canais on-line, com preços melhores que de fábrica!
                     <br>
@@ -108,13 +108,13 @@
             </div>
         </section>
         <section id="end" class="end">
-            <div class="container">
+            <div class="container right">
                 <h1>
                     No grupo de WhatsApp, você receberá em primeira mão nossas ofertas e informações sobre o evento.
                 </h1>
             </div>
             <ul class="container-items">
-                <li class="box-items">
+                <li class="box-items bottom">
                     <svg fill="currentColor " xmlns="http://www.w3.org/2000/svg" height="54" viewBox="0 0 24 24">
                         <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204
                          0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259
@@ -125,7 +125,7 @@
                     </svg>
                     <h1>Nossa Live do Queima de Roupas acontecerá no Instagram <b>@mayvabicicletas</b>, 06 de Agosto às 20 horas.</h1>
                 </li>
-                <li class="box-items">
+                <li class="box-items bottom">
                     <svg fill="currentColor " xmlns="http://www.w3.org/2000/svg" width="64" height="54" viewBox="0 0 2500.000000 2094.000000" >
                         <g transform="translate(0.000000,2094.000000) scale(0.100000,-0.100000)"
                         stroke="none">
@@ -162,7 +162,7 @@
                     </h1>
                     
                 </li>
-                <li class="box-items">
+                <li class="box-items bottom">
                     <svg fill="currentColor " xmlns="http://www.w3.org/2000/svg" width="64" height="54" viewBox="0 0 2084.000000 2084.000000"
                     preserveAspectRatio="xMidYMid meet">
 
@@ -208,14 +208,14 @@
                 </li>
             </ul>
             <div class="container-round">
-                <div class="container-picture">
+                <div class="container-picture left">
                     <picture>
                         <source srcset="./assets/img/webp's/whatsapp-phone.webp" type="image/webp" />
                         <img src="./assets/img/whatsapp-phone.png" alt="Celular no WhatsApp" id="phone-whatsapp-img"
                         class="phone-whatsapp-img" />
                     </picture>
                 </div>
-                <div class="container">
+                <div class="container right">
                     <h1>Uma das maiores lojas de bicicletas do nordeste, cada vez mais perto de você!</h1>
                     <a class="botao-cta-3" href="https://api.whatsapp.com/send?phone=5584987873771 " target="_blank ">
                         <svg viewBox="0 0 24 24 ">
@@ -237,7 +237,6 @@
             <span>Copyright AGENCIART &#169; 2024<br />Todos os direitos reservados.</span>
         </div>
     </footer>
-    <script async src="./assets/js/navbar.js"></script>
     <script async src="./assets/js/animations/fromBottom.js"></script>
     <script async src="./assets/js/animations/fromLeft.js"></script>
     <script async src="./assets/js/animations/fromRight.js"></script>
