--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mayva Bicicletas | Invista em sua saúde!" />
 
-    <title>MAYVA - Mayva Bicicletas | Invista em sua saúde!</title>
-    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon" />
+    <title>Mayva Bicicletas | Invista em sua saúde!</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
