updating video to the actual event video

--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
             </h2>
             <div class="container-video">
                 <div class="iframe-container">
-                    <iframe width="749" height="407" src="https://www.youtube.com/embed/RHLr6BBSdcE?si=hR6GfFxDHQCRjXlb"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe width="724" height="407" src="https://www.youtube.com/embed/3FyI6rfQkdY?si=LIbXu58AYiVUr37_&amp;controls=0"
+                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </div>
             <a class="botao-cta-1" href="https://api.whatsapp.com/send?phone=5584987873771 " target="_blank ">
