changing video from yt source to file source

--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
                 Está chegando a maior Queima de Estoque do Brasil em Roupas para Ciclistas...
             </h2>
             <div class="container-video">
-                <div class="iframe-container">
-                    <iframe width="724" height="407" src="https://www.youtube.com/embed/3FyI6rfQkdY?si=LIbXu58AYiVUr37_&amp;controls=0"
-                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+                <video class="video-player" controls>
+                    <source src="./assets/video/videoEventoMayva.mp4" type="video/mp4">
+                    Seu navegador não permite carregar vídeos.
+                </video>
             </div>
             <a class="botao-cta-1" href="https://api.whatsapp.com/send?phone=5584987873771 " target="_blank ">
                 <svg viewBox="0 0 24 24 ">
