--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 Está chegando a maior Queima de Estoque do Brasil em Roupas para Ciclistas...
             </h2>
             <div class="container-video">
-                <video class="video-player" controls>
+                <video class="video-player" controls autoplay="autoplay">
                     <source src="./assets/video/videoAdvancedCompressed.mp4" type="video/mp4;codecs="avc1.42E01E, mp4a.40.2"">
                     Seu navegador não permite carregar vídeos.
                 </video>
