--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mayva Bicicletas | Invista em sua saúde!" />
 
-    <title>Mayva Bicicletas | Invista em sua saúde!</title>
+    <title>Mayva Bicicletas | Live 06/08 às 20h</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
